console,oauth: Fix scrollbar height

--- a/pkg/webui/styles/main.styl
+++ b/pkg/webui/styles/main.styl
@@ -32,7 +32,8 @@ body
     height: 100%
 
 ::-webkit-scrollbar
-  width: .5em
+  width: .5rem
+  height: .5rem
 
 ::-webkit-scrollbar-thumb
   background-color: darker($c-backdrop)
